# Fe203

./: .gitignore  Cargo.toml  LICENSE  README.md  fe203.toml
.github/: copilot-instructions.md
.github/instructions/: docs-style.instructions.md  release-workflow.instructions.md  rust-fe203.instructions.md
.github/prompts/: add-fe-rule-end-to-end.prompt.md
.github/workflows/: release.yml
benchmarks/workload/: module_core.rs  module_lint.rs  module_mixed.rs  module_regex.rs  module_security.rs
docs/: README.md  architecture.md  changelog.md  cli-reference.md  configuration.md  contributing.md  getting-started.md  roadmap.md  suppressions.md
docs/rules/: debug.md  lint.md  overview.md  path.md  regex.md  secrets.md  shell.md  unsafe.md
src/: cli.rs  config.rs  finding.rs  lib.rs  main.rs  reporting.rs  scanner.rs
src/app/: cargo.rs  mod.rs  path_setup.rs  scan.rs  update.rs
src/app/update/: json_scan.rs  mod.rs  platform.rs  release.rs  tests.rs  transfer.rs  types.rs
src/cli/: mod.rs  parser.rs  ui.rs
src/rules/: debug_code.rs  lint.rs  mod.rs  path_safety.rs  regex_checks.rs  secrets.rs  shell.rs  syntax.rs  unsafe_usage.rs
src/rules/lint/: clamp.rs  comments.rs  fallible.rs  ignored_result.rs  mod.rs  suppressions.rs  test_reference.rs  unused.rs
src/rules/regex_checks/: dynamic.rs  helpers.rs  mod.rs  nested_quantifier.rs  suspicious.rs  unanchored.rs
src/rules/syntax/: common.rs  extract.rs  method_chain.rs  mod.rs  tests.rs  types.rs
src/scanner/: cache.rs  discovery.rs  mod.rs  patterns.rs  scan.rs
tests/: pipeline.rs
(+4 files in other folders)
